fix: Slider navigation on mobile

--- a/src/sass/02_components/_slider.scss
+++ b/src/sass/02_components/_slider.scss
@@ -34,10 +34,19 @@
 		justify-content: space-between;
 		margin-top: var(--spacing-1000);
 		gap: var(--spacing-1000);
+
+		@include mobile {
+			flex-direction: column;
+			align-items: stretch;
+		}
 	}
 
 	&__buttons {
 		display: flex;
+
+		@include mobile {
+			display: none;
+		}
 
 		&-divider {
 			position: relative;
